# legal-assistant

./: .dockerignore  .gitignore  .gitmodules  docker-compose.yaml  pyproject.toml  requirements.txt  shell.nix
client/: index.js  package-lock.json  package.json
client/.wwebjs_cache/: 2.3000.1026080446.html
nginx/: Dockerfile  nginx.conf
nginx/static/: index.html
resources/: init.sql
server/: Dockerfile  wsgi.py
server/agents/legal_dispatcher/: agent.py
server/agents/legal_dispatcher/subagents/civil_cause/: agent.py
server/agents/legal_dispatcher/subagents/consumer_cause/: agent.py
server/agents/legal_dispatcher/subagents/worker_cause/: agent.py
server/helpers/: context_helpers.py  db_helpers.py  rag.py  sessions.py
src/: wsgi.py
src/agents/legal_dispatcher/: agent.py
src/agents/legal_dispatcher/subagents/civil_cause/: agent.py  tools.py
src/agents/legal_dispatcher/subagents/consumer_cause/: agent.py  tools.py
src/agents/legal_dispatcher/subagents/worker_cause/: agent.py  tools.py
src/helpers/: context_helpers.py
telegram_client/: Dockerfile  asgi.py  pyproject.toml
